Anhängen von Auslassungspunkten.

--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -268,9 +268,16 @@ es durch \verb!\,! erzeugt werden. Es kommt u.\,a. an folgenden Stellen zum Eins
 
 \section{Auslassungspunkte}
 
-Der Dreipunkt \Char{…} ist nicht etwa die Aneinanderreihung von
-drei (oder noch schlimmer: 4 oder 17) Punkten \Char{{.}{.}{.}}, sondern ein eigenständiges
-Zeichen (\texttt{2026}, Linux-Tastatur \keys{\AltGr+.}).
+Der \emph{Dreipunkt} (auch die \emph{Ellipse}) \Char{…}, mit dem
+Auslassungspunkte gesetzt werden, ist nicht etwa die Aneinanderreihung
+von drei (oder noch schlimmer: vier oder 17) Punkten \Char{{.}{.}{.}},
+sondern ein eigenständiges Zeichen (\texttt{2026}, Linux-Tastatur
+\keys{\AltGr+.}).  Wird ein Satzteil ausgelassen, so wird der
+Dreipunkt mit einem geschützten Leerzeichen angehängt; wird ein
+Wortteil ausgelassen, bekommt er natürlich kein Leerzeichen: »Manche
+Leute mögen denken, das sei ganz große Sch… ganz großer
+Scheibenkleister.  Aber so sieht es einfach besser aus~…«
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
