Verhindere hässliche Zeilenumbrüche / Worttrennungen.

--- a/titelei.tex
+++ b/titelei.tex
@@ -19,7 +19,7 @@
 ~%
 \vfill%
 \noindent Dieses Skript wurde mit \LaTeX{} gesetzt. Als Schriftart wurde die
-Minion von Robert Slimbach verwendet. Das Gesamtlayout ist inspiriert von Robert
+\mbox{Minion} von Robert Slimbach verwendet. Das Gesamtlayout ist \mbox{inspiriert} von Robert
 Bringhursts \emph{The Elements of Typographic Style}.
 \cleardoublepage
 
