Umformuliert, damit schönerer Blocksatz.

--- a/titelei.tex
+++ b/titelei.tex
@@ -18,9 +18,10 @@
 \thispagestyle{empty}%
 ~%
 \vfill%
-\noindent Dieses Skript wurde mit \LaTeX{} gesetzt. Als Schriftart wurde die
-\mbox{Minion} von Robert Slimbach verwendet. Das Gesamtlayout ist \mbox{inspiriert} von Robert
-Bringhursts \emph{The Elements of Typographic Style}.
+\noindent Dieses Skript wurde mit \LaTeX{} gesetzt. Als Hauptschrift
+wurde die Minion von Robert Slimbach verwendet. Das Gesamtlayout ist
+\mbox{inspiriert} von Robert Bringhursts \emph{The Elements of
+  Typographic Style}.
 \cleardoublepage
 
 %%% Local Variables:
