--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -9,6 +9,7 @@ je nach Situation verschieden geeigneten sein können.
 \section{Kursivsatz}
 
 \marginnote{\texttt{\textbackslash textit}}Die wohl üblichste Methode, Passagen
+\todo{auch \texttt{\textbackslash emph} erwähnen?}
 im Fließtext hervorzuheben, ist, sie \emph{kursiv} zu setzen. Diese Hervorhebung
 ist dezent und seit vielen Jahrhunderten etabliert. Fast alle Schriftarten
 bringen eigene Schriftschnitte für kursiven Text (siehe \cref{sec:Schnitte})
