--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -35,10 +35,11 @@ eingesetzt werden.
 Variante der Großbuchstaben, die so hoch wie übliche Kleinbuchstaben ist. Diese
 Glyphen heißen \textsc{kapitälchen}. Man bemerke, dass sich diese Zeichen
 deutlich von einer reinen Skalierung der Großbuchstaben unterscheiden, zum
-Vergleich: \textsmaller[2]{KAPITÄLCHEN}; der wohl größte Unterschied ist die
-deutlich zu geringe Strichdicke. Bevor man Kapitälchen verwendet, sollte man
-also prüfen, ob die eingesetzte Schriftart solche enthält, da man sonst Gefahr
-läuft, Kapitälchen durch Skalierung zu imitieren.\looseness-1
+Vergleich: \textsmaller[2]{KAPITÄLCHEN}; der wohl größte Unterschied ist die bei
+den skalierten Großbuchstaben deutlich zu geringe Strichdicke. Bevor man
+Kapitälchen verwendet, sollte man also prüfen, ob die eingesetzte Schriftart
+solche enthält, da man sonst Gefahr läuft, Kapitälchen durch Skalierung zu
+imitieren.\looseness-1
 
 Bei Kapitälchen wird nicht zwischen Groß- und Kleinbuchstaben
 unterschieden. Dennoch geschieht es oft, dass zur Unterscheidung »normale«
