--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -65,8 +65,8 @@ Es ist ratsam, \emph{Akronyme} wie etwa \acr{spd} oder \acr{PHP} mit leicht
 gesperrten Kapitälchen zu setzen, damit sie nicht, wie etwa SPD und PHP,
 hervorstechen. Bei Akronymen, die Zahlen enthalten (wie etwa \acr{3D},
 \acr{C-3PO} oder \acr{BW\kern-.3px V\,29}), müssen dann aber
-\emph{Minuskelziffern} (siehe \cref{sec:Ziffern}) verwendet, sonst erhält man
-\acr{\figureversion{lf}{3}d}, \acr{C-\figureversion{lf}{3}PO} und
+\emph{Minuskelziffern} (siehe \cref{sec:Ziffern}) verwendet werden, sonst erhält
+man \acr{\figureversion{lf}{3}d}, \acr{C-\figureversion{lf}{3}PO} und
 \acr{bw\kern-.3px v\,\figureversion{lf}{29}}.
 
 \section{Versalien}
