--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -91,7 +91,7 @@ werden, etwa: \verb!\textit{Hi}!.  Es ist allerdings zu empfehlen, eine
 bevorzugte Hervorhebungsmethode festzulegen (standardmäßig: Kursivsatz) und dann
 den Befehl \verb!\emph!  (für „emphasize“) zu verwenden.
 
-Der Befehl \verb!\textls! ist Teil des Microtype-Pakets.  Über einen optionalen
+Der Befehl \verb!\textls! ist Teil des \texttt{microtype}-Pakets.  Über einen optionalen
 Parameter (oder global zu Beginn) kann festgelegt werden, wie stark gesperrt
 wird. Hier zwei Beispiele:
 \begin{center}
