--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,7 @@
 \lipsum[1-2]
 
 \begin{flushright}
-  Karlsruhe,\\4. Dezember 2024
+  Troisdorf und Hannover,\\25. Dezember 2024
 \end{flushright}
 
 \mainmatter
