Vorwort: Minor changes.

--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@ Stellen geben wir trotzdem Empfehlungen, deren Umsetzung ein
 Schriftstück oft deutlich professioneller wirken lässt als ein
 Abweichen davon.)
 
-Wir (Flo \& Philip) sind keine professionellen Typographen /
+Wir (Florian und Philip) sind keine professionellen Typographen oder
 Schriftsetzer; wir haben nur viel gefährliches Halbwissen\footnote{Und
   noch mehr Meinung!}, das wir gerne an Euch weitergeben möchten.
 Insofern solltet ihr diesem Skript nicht unhinterfragt vertrauen~-- es
