Spell Kant's name with uppercase letters.

--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -58,7 +58,7 @@ künstlich vergrößert, zum Vergleich:
 Kapitälchen können an verschiedenen Stellen zum Einsatz kommen, und je nach
 Anwendung bietet sich ein anderer Sperrfaktor an. In diesem Skript werden
 Kapitälchen unter anderem für die Überschriften der Abschnitte verwendet. Nicht
-selten werden Namen wie \name{immanuel kant} (1724–1804) mit
+selten werden Namen wie \name{Immanuel Kant} (1724–1804) mit
 Kapitälchen hervorgehoben.\looseness-1
 
 \section{Exkurs: Akronyme}
