--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,7 @@ historisch gewachsene Konventionen handelt: ein tatsächliches
 \emph{richtig} oder \emph{falsch} gibt es in der Typographie selten.
 Deshalb geht es uns vor allem darum, Euch im Kurs zu zeigen,
 \emph{worauf} man typographisch überhaupt alles achten kann und was es
-für \emph{Möglichkeiten} gibt~-- so erhaltet ihr eine Sprache, um
+für \emph{Möglichkeiten} gibt~-- so erhaltet Ihr eine Sprache, um
 fundiert typographische Entscheidungen treffen zu können.  (An vielen
 Stellen geben wir trotzdem Empfehlungen, deren Umsetzung ein
 Schriftstück oft deutlich professioneller wirken lässt als ein
@@ -53,7 +53,7 @@ Abweichen davon.)
 Wir (Florian und Philip) sind keine professionellen Typographen oder
 Schriftsetzer; wir haben nur viel gefährliches Halbwissen\footnote{Und
   noch mehr Meinung!}, das wir gerne an Euch weitergeben möchten.
-Insofern solltet ihr diesem Skript nicht unhinterfragt vertrauen~-- es
+Insofern solltet Ihr diesem Skript nicht unhinterfragt vertrauen~-- es
 enthält vermutlich einige Ungenauigkeiten oder Fehler; an einigen
 Stellen verkürzen wir auch stark.  Es gibt viel Fachliteratur zu
 Typographie, die Ihr bei weitergehenden Fragen zu Rate ziehen könnt
