--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -58,17 +58,17 @@ künstlich vergrößert, zum Vergleich:
 Kapitälchen können an verschiedenen Stellen zum Einsatz kommen, und je nach
 Anwendung bietet sich ein anderer Sperrfaktor an. In diesem Skript werden
 Kapitälchen unter anderem für die Überschriften der Abschnitte verwendet. Nicht
-selten werden Namen wie \name{immanuel kant} (1724–1804) mit
+selten werden Namen wie \name{Immanuel Kant} (1724–1804) mit
 Kapitälchen hervorgehoben.\looseness-1
 
 \section{Exkurs: Akronyme}
 
 Es ist ratsam, \emph{Akronyme} wie etwa \acr{spd} oder \acr{PHP} mit leicht
 gesperrten Kapitälchen zu setzen, damit sie nicht, wie etwa SPD und PHP,
-hervorstechen. Bei Akronymen, die Zahlen enthalten (wie etwa \acr{3D},
-\acr{C-\kern-1pt3PO} oder \acr{BW\kern-.3px V\,29}), müssen dann aber
-\emph{Minuskelziffern} (siehe \cref{sec:Ziffern}) verwendet werden, sonst erhält
-man \acr{\figureversion{lf}{3}d}, \acr{C-\kern-1pt\figureversion{lf}{3}PO} und
+hervorstechen. Bei Akronymen, die Zahlen enthalten (wie \acr{C-\kern-1pt3PO}
+oder \acr{BW\kern-.3px V\,29}), müssen dann aber \emph{Minuskelziffern} (siehe
+\cref{sec:Ziffern}) verwendet werden, sonst erhält man
+\acr{C-\kern-1pt\figureversion{lf}{3}PO} und
 \acr{BW\kern-.3px V\,\figureversion{lf}{29}}.
 
 \section{Versalien}
