--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -1,8 +1,8 @@
 \chapter{Seitenlayout}
 
 In diesem Kapitel treten wir einen Schritt zurück und betrachten die zu
-gestaltende Seite als Ganzes. Etwas fancier ausgedrückt: Nach der
-Mikrotypographie wenden wir uns der Makrotypographie zu. Hier geht es also um
+gestaltende Seite als Ganzes. Anders ausgedrückt: Nach der
+Mikrotypographie wenden wir uns nun der \emph{Makrotypographie} zu. Hier geht es also um
 die Frage wo auf einer Seite Textelemente platziert werden können – stets mit
 dem Ziel, einerseits ein harmonisches und »ruhiges« Gesamtbild zu erzeugen und
 andererseits die Lesbarkeit an sich zu optimieren.
@@ -33,7 +33,7 @@ Prinzipien:
 \item Das Seitenverhältnis des Satzspiegels gleicht dem der Seite.
 \end{enumerate}
 Eine Umformulierung der vielleicht etwas willkürlich wirkenden ersten Regel ist,
-das der \emph{gemeinsame} innere Rand genauso groß wie jeder der äußeren Ränder
+dass der \emph{gemeinsame} innere Rand genauso groß wie jeder der äußeren Ränder
 ist. Befolgt man all diese Regeln, bleibt nur noch ein Freiheitsgrad übrig, und
 dieser kann beschrieben werden durch das Breitenverhältnis zwischen Satzspiegel
 und Seite. In \cref{fig:Satzspiegel} finden sich zwei Beispiele, wo dieses
