Notes (in comments) for chapter 3.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -40,15 +40,29 @@ Schnitten nennt man dann auch eine \emph{Schriftfamilie}.\footnote{Das
 \item Gibt diverse Klassen (s. bspw. \acr{DIN}~16518).  Für uns hier
   im Skript relevant: Mit Serifen und ohne (= Grotesk = Sans Serif =
   Serifenlose Linear-Antiqua).
+\item Evtl. Historisches: Herkunft der Groß- und Kleinbuchstaben.
 \end{itemize}
 
 \section{Schriftschnitte}
 \label{sec:Schnitte}
 
+%% Stärke, Lage, Breite.  Bei Lage (also gerade vs. kursiv) auch
+%% Historisches™ erwähnen.
+
 \section{Liniensystem}
 \label{sec:Linien}
 
 %% Inkl. Maßeinheiten und so, und Zeilenabstand
+
+%% Zu Schriftgröße: 1em = Schriftgröße.  Was das mit der tatsächlichen
+%% Glyphengröße zu tun hat: heutzutage sehr willkürlich; oft so was
+%% wie Versalhöhe ≈ .7em (oder so?!).
+
+%% Zeilenabstand: eigentlich sollte™ man einfach den Abstand zwischen
+%% den Grundlinien messen.  Es gibt sinnvolle Standardeinstellungen,
+%% bspw. in LaTeX 10pt → 12pt, 11pt → 13.6pt, 12pt → 14.5pt.  MS Word
+%% und LibreOffice benutzen auch ca. 1,2-faches der Schriftgröße als
+%% Grundeinstellung, das heißt da aber »einzeilig«.
 
 \section{Kerning und Spacing}
 \label{sec:KernSpace}
@@ -56,6 +70,11 @@ Schnitten nennt man dann auch eine \emph{Schriftfamilie}.\footnote{Das
 %% Hier microtype erwähnen?
 
 \section{Ligaturen}
+
+%% Ligatur = eine Glyphe für mehrere Buchstaben.  Sinnvoll, um
+%% ruhigeres Schriftbild zu erreichen.  Traditionelle Ligaturen aus
+%% lateinischen Texten; je nach Sprache zusätzliche.  Fun fact: ß =
+%% ſ-z- oder ſ-s-Ligatur.  (Problem: die Minion hat kein ſ :( )
 
 %% Ligaturbrecher erwähnen!
 
